--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   </head>
 
   <body>
+    <%if flash[:notice]%>
+    <div><%= flash[:notice]%></div>
+    <% end %>
+
+    <%if flash[:alert]%>
+    <div><%= flash[:alert]%></div>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
